made styling changes to welcomepage and nav to ensure viewport size doesn't break the flow of the document

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,12 +1,17 @@
+body {
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+}
+
 .button {
     background-color: DodgerBlue;
-    border: none;
+    border: 2px outset DodgerBlue;
     color: white;
-    padding: 10px 12px;
+    padding: 6px 12px;
     cursor: pointer;
 }
 
 .button:hover {
-    background-color: RoyalBlue;
+    border: 2px inset DodgerBlue;
 }
 
